<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FAFAFA"
    android:padding="16dp"
    tools:context=".MainActivity">

    <!-- Navigation Bar with back button and title -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingVertical="8dp">

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:src="@drawable/ic_back"
            android:contentDescription="Back" />

    </LinearLayout>
    <!-- Search Bar -->
    <EditText
        android:id="@+id/searchFieldAccom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_search_tour"
        android:padding="12dp"
        android:drawableLeft="@drawable/ic_search"
        android:background="@drawable/search"
        android:layout_margin="5dp" />

    <!-- Options for Date and Room Information -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="8dp">

        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:text="@string/select_date2"
                android:textColor="#666666"
                android:textSize="12sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/start_date2"
                    android:textColor="#666666"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/txtStartDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:drawableStart="@drawable/ic_date"
                    android:textColor="#666666"
                    android:textSize="14sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_price"
                android:layout_gravity="center"
                android:textColor="#666666"
                android:textSize="12sp" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/txtPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price_from"
                android:textColor="#333333"
                android:textSize="14sp" />
            <EditText
                android:id="@+id/edtPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hint_enter_price"
                android:inputType="numberDecimal"
                android:textColor="#333333"
                android:textSize="12sp" />
        </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <!-- RecyclerView for Trip List -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycleviewTour"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="16dp"
        android:clipToPadding="false"
        android:scrollbars="vertical" />

<!--    <com.google.android.material.floatingactionbutton.FloatingActionButton-->
<!--        android:id="@+id/buttonAdd"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_gravity="end|bottom"-->
<!--        android:layout_margin="16dp"-->
<!--        android:contentDescription="Add item"-->
<!--        app:srcCompat="@drawable/ic_add" />-->

</LinearLayout>
